@@ -1,3 +1,7 @@
+2012-05-23  Torbjorn Granlund  <tege@gmplib.org>
+
+	* tests/mpz/reuse.c: Major rewrite.
+
 2012-05-23 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpz/sqrt.c: Further simplify.
